@@ -1,3 +1,7 @@
+Sun Apr 27 19:39:42 2014  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_strptime.c (date__strptime_internal): do not overwrite century.
+
 Sat Apr 26 11:50:08 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* test/ruby/test_enum.rb (test_flat_map): Added test for flat_map.
